2006-11-03  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version.
	* src/Editors/_EditLdsOrd.py (update_parent_label): Spurious
	translation.
	* src/DataViews/_RelationView.py (write_event_ref): Spurious
	translation.
	* src/ReportBase/_ReportDialog.py (get_header): Spurious
	translation.
	* RELEASE: version 2.2.2 is released.

2006-11-02  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: fix spacing
	* src/ScratchPad.py: handle deleting of a person properly

2006-11-02  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Typo.
	* NEWS: Update.

2006-11-01  Don Allingham  <don@gramps-project.org>
	* src/plugins/DescendReport.py: handle exceeding the max generations

2006-11-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ScratchPad.py: Fix signal connection and dbstate vs. db confusion;
	Add more checks for is_valid; This should now remove stale objects on
	delete or database change.

2006-10-31  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: add right context menu
	* src/DataViews/_PersonView.py: fix typo
	* src/GrampsCfg.py: Fix check box message for adding a family
	* src/Reorder.py: Allow for reordering of relationships, enhance
	buttons
	* src/DataViews/_RelationView.py: add reorder support
	* src/glade/gramps.glade: reorder dialog
	* src/Makefile.am: install Reorder.py

2006-10-31  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py (write_families): Properly write
	custom attr type.

2006-10-30  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: prevent updates on person list if not 
	visible (person-added)
	* src/gramps_main.py: remove 2.1 unstable warning
	* src/Makefile.am: install Lru.py

2006-10-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: make look more like gedit
	* src/Lru.py: Added least-recently-used module from
	the PyPE program 